# internal/controller/http/statistic_controller.go
@@ -52,7 +52,7 @@ func NewStatisticController(statisticUsecase usecase.StatisticUsecase) *Statisti
 // @Success 200 {object} domain.SuccessResponse{data=domain.StatisticData} "Data statistik berhasil diambil (partial untuk user biasa)"
 // @Failure 401 {object} domain.ErrorResponse "Tidak memiliki akses"
 // @Failure 500 {object} domain.ErrorResponse "Terjadi kesalahan pada server"
-// @Router /api/v1/statistic [get]
+// @Router /statistic [get]
 func (ctrl *StatisticController) GetStatistics(c *fiber.Ctx) error {
 	// Extract authenticated user ID
 	userID := ctrl.GetAuthenticatedUserID(c)
